[package]
name = "graph-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.50"
atomic_refcell = "0.1.13"
bytes = "1.0"
graph = { path = "../graph" }
graph-chain-ethereum = { path = "../chain/ethereum" }
graph-chain-near = { path = "../chain/near" }
graph-chain-substreams = { path = "../chain/substreams" }
graph-runtime-wasm = { path = "../runtime/wasm" }
serde_yaml = { workspace = true }
tower = { version = "0.5.2", features = ["full"] }
thiserror = { workspace = true }
cid = "0.11.1"
anyhow = "1.0"

[dev-dependencies]
tower-test = "0.4.0"
wiremock = "0.6.5"
